Fix overlap problems with multi selector

--- a/src/app/table/filter/bool-filter/bool-filter.component.css
+++ b/src/app/table/filter/bool-filter/bool-filter.component.css
@@ -27,3 +27,10 @@ p,li {
   font-size: 0.9rem !important;
 }
 
+.selected-item-container {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.dropdown-multiselect--active, .multiselect-dropdown {
+  padding: 0px 8px 0px 8px !important;
+}
