--- a/src/app/table/filter/date-filter/date-filter.component.css
+++ b/src/app/table/filter/date-filter/date-filter.component.css
@@ -8,3 +8,11 @@ outline-style: none !important;
 p,li {
   font-size: 0.9rem !important;
 }
+
+.selected-item-container {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.dropdown-multiselect--active, .multiselect-dropdown {
+  padding: 0px 8px 0px 8px !important;
+}
