--- a/src/app/table/filter/number-filter/number-filter.component.css
+++ b/src/app/table/filter/number-filter/number-filter.component.css
@@ -28,3 +28,12 @@ p,li {
   font-size: 0.9rem !important;
 }
 
+.selected-item-container {
+  padding: 0px 0px 0px 0px !important;
+}
+
+.dropdown-multiselect--active, .multiselect-dropdown {
+  padding: 0px 8px 0px 8px !important;
+}
+
+
